# qnngds

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  cleanup_device.gds  demo_design devices map(2).txt  environment.yml  flake.nix  libraries.rst  pyproject.toml  requirements.txt  snspd_cell.gds  test.py  utilities.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/hooks/: pre-push
.github/workflows/: doctest.yml  generate-api.yml  publish-to-test-pypi.yml  test.yml
docs/: .gitignore  Makefile  conf.py  index.rst  requirements.txt
docs/dev/: coding.rst  conf.py  contribute.rst  develop.rst  documenting.rst  index.rst  packaging.rst  setup.rst  temporary.rst
docs/images/: generate_images.py
docs/source/: api.rst  conf.py  generate_imagesRST.py  generate_lib.py  generate_libraries.py  index.rst  librairies.rst  libraries.rst  libraries_goal.rst  quickstart.ipynb  test2.rst  tutorials  tutorials.rst
docs/source/_build/: .buildinfo  api.html  genindex.html  index.html  librairies.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/source/tutos2/: create_cell.ipynb
docs/src/: api.rst  contributing_index.rst  generate_api.py  generate_tutorials.py  index.rst  tutorials_index.rst
docs/src/contributing/: contribute.rst  develop.rst  setup.rst  tutorials.rst
docs/src/tutorials/: __init__.py  _save_qp.py  best_practices.py  custom_circuit.py  experiment_generate_beginner1.py  experiment_generate_beginner2.py  experiment_generate_beginner3.py  gettingstarted.rst  qg_analysis.py  sample1.py  tdgl_fem.py
docs/tutorials/: test.rst
docs/tutos/: design.ipynb
docs/user/: api.rst  cleanup_device.gds  conf.py  generate_api.py  generate_libraries.py  generate_tutorials.py  index.rst  layer_views.yaml  libraries.rst  pdk.py  plot_images.py  test2.rst  tuto_gettingstarted.rst  tutorials.rst
docs/user/images/: plot_images.py
docs/user/tutorials/: __init__.py  _save_qp.py  example_ntron.py  experiment_generate_beginner1.py  experiment_generate_beginner1.rst  sample1.py  (+13 more)
example/: README.md  test.py
example/pdk/: __init__.py  components.py  cross_section.py  layer_map.py  pdk.py
qnngds/: README.md  demodrey.py  design.py  devices.py  geometries.py  geometry.py  libraudrey.py  long_meanders.py  meander_geometry.py  nMem_v2_cellTest_x1.gds  omedeiro.py  omedeiro_archive.py  omedeiro_v2.py  omedeiro_v3.py  test.gds  utilities.py  wide_wire_rename.py
qnngds/STANDARD/: die_layout_standard.py  die_layout_standard_example.py
qnngds/archives/: geometry.py  libraudrey.py  omedeiro_v2.py  omedeiro_v3.py
qnngds/long_meander_helpers/: README.md  coords.py  generator_scripts.py  phidl_components.py
qnngds/quickplots of functions in design/: devices map.txt
qnngds/taper_helpers/: README.md  analytical.py  erickson_taper.py  klopfenstein_taper.py  spherical_bessel_zeros.py  taper_library.py
src/qnngds/: .test_structures.py.swo  __init__.py  _default_param.py  api.rst  cells.py  circuits.py  contrib.py  decorator.py  demo_design.py  design.py  devices.py  experiment.py  experiments.py  geometries.py  geometry.py  layout.py  omedeiro_v3.py  pads.py  pdk.py  port.py  sample.py  test_structures.py  tests.py  typing.py  utilities.py
test/: test.py
tests/: all_dev_on_gds.py  contrib.py  getting_started.py  single_dev_on_gds.py  test.py
(+29 files in other folders)
