[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "qnngds"

version = "5.0.0"

authors = [
  { name="A. Jacquillat", email="audrey01@mit.edu" },
  { name="A. Jacquillat", email="audrey.jacquillat@gmail.com" },
  { name="R. Foster", email="reedf@mit.edu" },
  { name="E. Batson", email="emmabat@mit.edu"},
  { name="O. Medeiros", email="omedeiro@mit.edu"}
]
maintainers = [
  { name="A. Jacquillat", email="audrey01@mit.edu" },
  { name="R. Foster", email="reedf@mit.edu" }
]
description = "The QNN library for creating gds files"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
keywords = ["phidl", "nanowire_electronics", "nanofabrication", "gds"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]

dependencies = [
    "gdsfactory",
]

[project.urls]
Homepage = "https://github.com/qnngroup/qnngds"
Issues = "https://github.com/qnngroup/qnngds/issues"
Documentation = "https://qnngds.readthedocs.io/en/latest/"
How_to_contribute = "https://qnngds-dev.readthedocs.io/en/latest/"
